syntax = "proto2";

package app;

message ApiReq {
	required string ReqName = 1;
	required bytes  Data	= 2;
	optional int32	Flag	= 3;
}

message ApiAck {
	required string AckName = 1;
	required bytes  Data	= 2;
	optional int32 	Flag    = 3;
}

message Message {
	required string Data	= 1;
}